<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2124"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="15"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_rcgnz"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/thumb_image"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="60"
        android:adjustViewBounds="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_loaded" />

    <TextView
        android:id="@+id/response_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/result_string"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pet_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_pets_24"
            android:tint="#53ABE3"
            android:contentDescription="@string/dog_breed_recognition_button" />

        <ImageButton
            android:id="@+id/face_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_face_24"
            android:tint="#5B44A2"
            android:contentDescription="@string/emotion_recognition_button" />


        <ImageButton
            android:id="@+id/traffic_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_traffic_24"
            android:tint="#53ABE3"
            android:contentDescription="@string/traffic_sign_recognition_button" />

        <ImageButton
            android:id="@+id/plant_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_local_florist_24"
            android:tint="#53ABE3"
            android:contentDescription="@string/flower_recognition_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_send_24"
            app:backgroundTint="#715DAE"
            android:focusable="true" />
    </LinearLayout>


</LinearLayout>